[package]
name = "rplc"
version = "0.1.1"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/eva-ics/rplc"
description = "PLC programming in Rust"
readme = "README.md"
keywords = ["plc", "automation", "modbus", "opcua"]

[package.metadata.docs.rs]
features = ["modbus", "opcua", "eapi", "client"]

[package.metadata.playground]
features = ["modbus", "opcua", "eapi", "client"]

[lib]
name = "rplc"
path = "src/lib.rs"

[[bin]]
name = "rplc"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
Inflector = "0.11.4"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.17"
rplc_derive = "0.1.0"
indexmap = { version = "1.9.2", features = ["serde"] }
eva-common = { version = "0.2.6", features = ["payload", "bus-rpc", "events", "openssl-vendored"] }
log = "0.4.17"
once_cell = "1.17.1"
bmart-derive = "0.1.3"
env_logger = "0.10.0"
codegen = "0.2.0"
rmodbus = { version = "0.7.2", features = ["with_serde"], optional = true }
threadpool = "1.8.1"
triggered = "0.1.2"
negative-impl = "0.1.3"
syslog = "6.1.0"
signal-hook = "0.3.15"
libc = "0.2.142"
core_affinity = "0.8.0"
clap = { version = "4.2.5", optional = true, features = ["derive"] }
prettytable-rs = { version = "0.10.0", optional = true }
colored = { version = "2.0.0", optional = true }
hostname = "0.3.1"
ttl_cache = { version = "0.5.1", optional = true }
busrt = { version = "0.4.4", features = ["ipc", "rpc"], optional = true }
tokio = { version = "1.28.0", features = ["full"], optional = true }
eva-sdk = { version = "0.2.5", features = ["controller"], optional = true }
async-channel = { version = "1.8.0", optional = true }
serial = { version = "0.4.0", optional = true }
opcua = { git = "https://github.com/divi255/opcua", optional = true }
bmart = { version = "0.2.4", optional = true }
tera = "1.18.1"

[features]
cli = ["clap", "prettytable-rs", "colored", "client", "eva"]
client = ["tokio", "bmart"]
eva = ["busrt", "tokio", "eva-sdk", "async-channel"]
modbus = ["rmodbus", "serial"]
opcua = ["dep:opcua", "ttl_cache"]

[profile.release]
strip = true
lto = true
codegen-units = 1
