[package]
name = "rplc_derive"
version = "0.1.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/eva-ics/rplc"
description = "Derive macros for rPLC project"
readme = "README.md"
keywords = ["plc", "automation"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14.3"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

