[package]
name = "custom_io_rpi_gpio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rplc = { version = "0.1.1", path = "../.." }
rppal = "0.14.1"

[build-dependencies]
rplc = { version = "0.1.1", path = "../.."}
