[package]
name = "quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rplc = { version = "0.1.1", path = "../..", features = ["modbus"] }

[build-dependencies]
rplc = { version = "0.1.1", path = "../..", features = ["modbus"] }
